@startuml Nakama_ERD
!theme plain
skinparam linetype ortho
skinparam roundcorner 8
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classHeaderBackgroundColor #1f2124
skinparam classHeaderFontColor #f5a800
skinparam classBorderColor #f5a800
skinparam classBackgroundColor #2c2f33
skinparam classFontColor #ffffff
skinparam arrowColor #f5a800
skinparam noteBackgroundColor #2c2f33
skinparam noteFontColor #ffffff
skinparam noteBorderColor #f5a800

title Nakama — Diagrama Entidad Relación

' ============================================================
' SCHEMA: catalogo
' ============================================================

package "catalogo" #2c2f33 {

  entity "animes" {
    * id : UUID <<PK>>
    --
    * anilist_id : INTEGER <<UNIQUE>>
    * titulo : VARCHAR(255)
    titulo_japones : VARCHAR(255)
    titulo_romaji : VARCHAR(255)
    imagen_url : TEXT
    banner_url : TEXT
    sinopsis : TEXT
    estado_emision : VARCHAR(50)
    episodios : SMALLINT
    duracion_min : SMALLINT
    temporada : VARCHAR(20)
    anio : SMALLINT
    tipo : VARCHAR(20)
    estudio : VARCHAR(150)
    calificacion_promedio : NUMERIC(4,2)
    total_resenas : INTEGER
    total_en_listas : INTEGER
    * creado_en : TIMESTAMPTZ
    * actualizado_en : TIMESTAMPTZ
  }

  entity "generos" {
    * id : UUID <<PK>>
    --
    * nombre : VARCHAR(100) <<UNIQUE>>
  }

  entity "anime_generos" {
    * anime_id : UUID <<PK, FK>>
    * genero_id : UUID <<PK, FK>>
  }

  entity "demografias" {
    * id : UUID <<PK>>
    --
    * nombre : VARCHAR(100) <<UNIQUE>>
  }

  entity "anime_demografias" {
    * anime_id : UUID <<PK, FK>>
    * demografia_id : UUID <<PK, FK>>
  }

  entity "personajes" {
    * id : UUID <<PK>>
    --
    * anilist_personaje_id : INTEGER <<UNIQUE>>
    * anime_id : UUID <<FK>>
    * nombre : VARCHAR(255)
    nombre_nativo : VARCHAR(255)
    imagen_url : TEXT
    descripcion : TEXT
    rol : VARCHAR(20)
  }

}

' ============================================================
' SCHEMA: social
' ============================================================

package "social" #2c2f33 {

  entity "usuarios" {
    * id : UUID <<PK>>
    --
    * email : VARCHAR(255) <<UNIQUE>>
    * username : VARCHAR(50) <<UNIQUE>>
    * nombre_display : VARCHAR(100)
    avatar_url : TEXT
    banner_url : TEXT
    bio : VARCHAR(500)
    sitio_web : VARCHAR(255)
    * perfil_privado : BOOLEAN
    * resenas_publicas : BOOLEAN
    * listas_publicas : BOOLEAN
    * creado_en : TIMESTAMPTZ
    * actualizado_en : TIMESTAMPTZ
    ultimo_acceso : TIMESTAMPTZ
  }

  entity "seguidores" {
    * seguidor_id : UUID <<PK, FK>>
    * seguido_id : UUID <<PK, FK>>
    --
    * estado : estado_solicitud
    * creado_en : TIMESTAMPTZ
  }

  entity "lista_usuario" {
    * id : UUID <<PK>>
    --
    * usuario_id : UUID <<FK>>
    * anime_id : UUID <<FK>>
    * estado : estado_lista
    * episodios_vistos : SMALLINT
    * es_favorito : BOOLEAN
    * es_privada : BOOLEAN
    notas_privadas : TEXT
    * creado_en : TIMESTAMPTZ
    * actualizado_en : TIMESTAMPTZ
  }

  entity "calificacion_personajes" {
    * id : UUID <<PK>>
    --
    * usuario_id : UUID <<FK>>
    * personaje_id : UUID <<FK>>
    * posicion : SMALLINT
    * creado_en : TIMESTAMPTZ
  }

}

' ============================================================
' SCHEMA: contenido
' ============================================================

package "contenido" #2c2f33 {

  entity "resenas" {
    * id : UUID <<PK>>
    --
    * usuario_id : UUID <<FK>>
    * anime_id : UUID <<FK>>
    * calificacion : SMALLINT
    contenido : TEXT
    * contiene_spoiler : BOOLEAN
    * es_publica : BOOLEAN
    * total_likes : INTEGER
    * creado_en : TIMESTAMPTZ
    editado_en : TIMESTAMPTZ
  }

  entity "reacciones_resena" {
    * id : UUID <<PK>>
    --
    * usuario_id : UUID <<FK>>
    * resena_id : UUID <<FK>>
    * tipo : tipo_reaccion
    * creado_en : TIMESTAMPTZ
  }

  entity "colecciones" {
    * id : UUID <<PK>>
    --
    usuario_id : UUID <<FK>>
    * titulo : VARCHAR(255)
    descripcion : TEXT
    imagen_url : TEXT
    * es_editorial : BOOLEAN
    * es_publica : BOOLEAN
    * total_animes : INTEGER
    * creado_en : TIMESTAMPTZ
    * actualizado_en : TIMESTAMPTZ
  }

  entity "coleccion_animes" {
    * coleccion_id : UUID <<PK, FK>>
    * anime_id : UUID <<PK, FK>>
    --
    * posicion : SMALLINT
    nota : TEXT
    * agregado_en : TIMESTAMPTZ
  }

}

' ============================================================
' SCHEMA: comunidad
' ============================================================

package "comunidad" #2c2f33 {

  entity "comunidades" {
    * id : UUID <<PK>>
    --
    * nombre : VARCHAR(150) <<UNIQUE>>
    descripcion : TEXT
    imagen_url : TEXT
    banner_url : TEXT
    * tipo : VARCHAR(20)
    referencia_id : UUID
    * es_oficial : BOOLEAN
    * total_miembros : INTEGER
    creado_por : UUID <<FK>>
    * creado_en : TIMESTAMPTZ
  }

  entity "miembros" {
    * usuario_id : UUID <<PK, FK>>
    * comunidad_id : UUID <<PK, FK>>
    --
    * rol : VARCHAR(20)
    * unido_en : TIMESTAMPTZ
  }

  entity "publicaciones" {
    * id : UUID <<PK>>
    --
    * comunidad_id : UUID <<FK>>
    * usuario_id : UUID <<FK>>
    titulo : VARCHAR(300)
    * contenido : TEXT
    imagen_url : TEXT
    * total_likes : INTEGER
    * total_comentarios : INTEGER
    * creado_en : TIMESTAMPTZ
    editado_en : TIMESTAMPTZ
  }

  entity "comentarios" {
    * id : UUID <<PK>>
    --
    * publicacion_id : UUID <<FK>>
    * usuario_id : UUID <<FK>>
    padre_id : UUID <<FK>>
    * contenido : TEXT
    * total_likes : INTEGER
    * creado_en : TIMESTAMPTZ
    editado_en : TIMESTAMPTZ
  }

  entity "reacciones_publicacion" {
    * usuario_id : UUID <<PK, FK>>
    * publicacion_id : UUID <<PK, FK>>
    --
    * creado_en : TIMESTAMPTZ
  }

  entity "reacciones_comentario" {
    * usuario_id : UUID <<PK, FK>>
    * comentario_id : UUID <<PK, FK>>
    --
    * creado_en : TIMESTAMPTZ
  }

}

' ============================================================
' SCHEMA: sistema
' ============================================================

package "sistema" #2c2f33 {

  entity "notificaciones" {
    * id : UUID <<PK>>
    --
    * usuario_id : UUID <<FK>>
    * tipo : tipo_notificacion
    actor_id : UUID <<FK>>
    referencia_id : UUID
    mensaje : TEXT
    * leida : BOOLEAN
    * creado_en : TIMESTAMPTZ
  }

  entity "feed" {
    * id : UUID <<PK>>
    --
    * usuario_id : UUID <<FK>>
    * actor_id : UUID <<FK>>
    * tipo : VARCHAR(50)
    * referencia_id : UUID
    * creado_en : TIMESTAMPTZ
  }

}

' ============================================================
' RELACIONES — catalogo
' ============================================================
animes          ||--o{ anime_generos        : ""
generos         ||--o{ anime_generos        : ""
animes          ||--o{ anime_demografias    : ""
demografias     ||--o{ anime_demografias    : ""
animes          ||--o{ personajes           : "tiene"

' ============================================================
' RELACIONES — social
' ============================================================
usuarios        ||--o{ seguidores           : "seguidor"
usuarios        ||--o{ seguidores           : "seguido"
usuarios        ||--o{ lista_usuario        : "tiene"
animes          ||--o{ lista_usuario        : "aparece en"
usuarios        ||--o{ calificacion_personajes : "clasifica"
personajes      ||--o{ calificacion_personajes : "clasificado en"

' ============================================================
' RELACIONES — contenido
' ============================================================
usuarios        ||--o{ resenas              : "escribe"
animes          ||--o{ resenas              : "recibe"
usuarios        ||--o{ reacciones_resena    : ""
resenas         ||--o{ reacciones_resena    : ""
usuarios        |o--o{ colecciones          : "crea"
animes          ||--o{ coleccion_animes     : ""
colecciones     ||--o{ coleccion_animes     : ""

' ============================================================
' RELACIONES — comunidad
' ============================================================
usuarios        |o--o{ comunidades          : "crea"
usuarios        ||--o{ miembros             : ""
comunidades     ||--o{ miembros             : ""
usuarios        ||--o{ publicaciones        : "publica"
comunidades     ||--o{ publicaciones        : "contiene"
usuarios        ||--o{ comentarios          : "comenta"
publicaciones   ||--o{ comentarios          : "tiene"
comentarios     |o--o{ comentarios          : "responde a"
usuarios        ||--o{ reacciones_publicacion : ""
publicaciones   ||--o{ reacciones_publicacion : ""
usuarios        ||--o{ reacciones_comentario  : ""
comentarios     ||--o{ reacciones_comentario  : ""

' ============================================================
' RELACIONES — sistema
' ============================================================
usuarios        ||--o{ notificaciones       : "recibe"
usuarios        |o--o{ notificaciones       : "actor"
usuarios        ||--o{ feed                 : "ve"
usuarios        ||--o{ feed                 : "actor"

@enduml
